# AI-Cleaner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  aigc_detector.py  constants.py  database.py  diffing.py  main.py  prompt_service.py  schemas.py  security.py  settings_service.py  workflow.py
backend/app/nlp/: __init__.py  pipeline.py  wrapper.py
backend/app/nlp/humanize_chinese/: LICENSE  README.upstream.md
backend/app/nlp/humanize_chinese/scripts/: _text_utils.py  academic_cn.py  check_assets.py  cilin_synonyms.json  compare_cn.py  detect_cn.py  humanize.py  humanize_cn.py  lr_coef_academic.json  lr_coef_cn.json  lr_coef_longform.json  ngram_freq_cn_human_holdout.json  ngram_model.py  patterns_cn.json  restructure_cn.py  style_cn.py  train_lr_academic.py  train_lr_longform.py  train_lr_multisource.py  train_lr_scorer.py  (+3 more)
backend/app/prompts/: novel.md  paperpass.md  paperyy.md  weipu.md  zhuque.md
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
backend/tests/: test_core.py
docs/: test.txt
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: generate-background-formula-svgs.mjs
frontend/src/: App.test.tsx  App.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: DiffView.tsx  HistoryList.tsx  SettingsPanel.tsx  Tooltip.tsx  TypewriterOutput.tsx  WindCanvas.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: app.css
frontend/src/test/: setup.ts
